[gd_scene load_steps=4 format=3 uid="uid://igapxb6maesp"]

[ext_resource type="PackedScene" uid="uid://e2gi8k4848vs" path="res://levelselect/world_icon.tscn" id="1_7sb37"]
[ext_resource type="Script" path="res://levelselect/world_select.gd" id="1_bpokt"]
[ext_resource type="PackedScene" uid="uid://bqcc7lass5jxg" path="res://levelselect/player_icon.tscn" id="3_gsulk"]

[node name="WorldSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bpokt")

[node name="WorldIcon" parent="." instance=ExtResource("1_7sb37")]

[node name="WorldIcon2" parent="." instance=ExtResource("1_7sb37")]
offset_left = 128.0
offset_top = -128.0
offset_right = 192.0
offset_bottom = -64.0
world_index = 2

[node name="WorldIcon3" parent="." instance=ExtResource("1_7sb37")]
offset_left = 256.0
offset_top = 8.0
offset_right = 320.0
offset_bottom = 72.0
world_index = 3

[node name="WorldIcon4" parent="." instance=ExtResource("1_7sb37")]
offset_left = 384.0
offset_top = -256.0
offset_right = 448.0
offset_bottom = -192.0
world_index = 4

[node name="WorldIcon5" parent="." instance=ExtResource("1_7sb37")]
offset_left = 448.0
offset_top = -64.0
offset_right = 512.0
offset_bottom = 0.0
world_index = 5

[node name="WorldIcon6" parent="." instance=ExtResource("1_7sb37")]
offset_left = 576.0
offset_top = -256.0
offset_right = 640.0
offset_bottom = -192.0
world_index = 6

[node name="WorldIcon7" parent="." instance=ExtResource("1_7sb37")]
offset_left = 664.0
offset_top = 32.0
offset_right = 728.0
offset_bottom = 96.0
world_index = 7

[node name="WorldIcon8" parent="." instance=ExtResource("1_7sb37")]
offset_left = 800.0
offset_top = -208.0
offset_right = 864.0
offset_bottom = -144.0
world_index = 8

[node name="WorldIcon9" parent="." instance=ExtResource("1_7sb37")]
offset_left = 896.0
offset_top = 8.0
offset_right = 960.0
offset_bottom = 72.0
world_index = 9

[node name="WorldIcon10" parent="." instance=ExtResource("1_7sb37")]
offset_left = 1032.0
offset_top = -152.0
offset_right = 1096.0
offset_bottom = -88.0
world_index = 10

[node name="WorldIcon11" parent="." instance=ExtResource("1_7sb37")]
offset_left = 1104.0
offset_top = 120.0
offset_right = 1168.0
offset_bottom = 184.0
world_index = 11

[node name="WorldIcon12" parent="." instance=ExtResource("1_7sb37")]
offset_left = 1200.0
offset_top = -96.0
offset_right = 1264.0
offset_bottom = -32.0
world_index = 12

[node name="WorldIcon13" parent="." instance=ExtResource("1_7sb37")]
offset_left = 1264.0
offset_top = -304.0
offset_right = 1328.0
offset_bottom = -240.0
world_index = 13

[node name="WorldIcon14" parent="." instance=ExtResource("1_7sb37")]
offset_left = 1336.0
offset_top = 56.0
offset_right = 1400.0
offset_bottom = 120.0
world_index = 14

[node name="WorldIcon15" parent="." instance=ExtResource("1_7sb37")]
offset_left = 1400.0
offset_top = -184.0
offset_right = 1464.0
offset_bottom = -120.0
world_index = 15

[node name="WorldIcon16" parent="." instance=ExtResource("1_7sb37")]
offset_left = 1520.0
offset_top = -288.0
offset_right = 1584.0
offset_bottom = -224.0
world_index = 16

[node name="PlayerIcon" parent="." instance=ExtResource("3_gsulk")]
layout_mode = 0
